# convert-to-md

./: .gitignore  README.md  pyproject.toml
scripts/windows/: install-context-menu.ps1  uninstall-context-menu.ps1
src/convert_to_md/: __init__.py  __main__.py  cli.py  converter.py  docx_converter.py  image_utils.py  pdf_converter.py
tests/: conftest.py  test_cli.py  test_docx_converter.py  test_pdf_converter.py
